# ai-personal-growth-platform

./: .flake8  .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  docker-compose.yml  setup.cfg  Отчёт о ручном тестировании
.github/workflows/: ci.yml  lint.yml  simple-ci.yml
docs/: GIT_FLOW.md
tests/: test_habits.py
