[metadata]
name = ai-personal-growth-platform
version = 0.1.0
description = AI-платформа для личностного роста

[flake8]
max-line-length = 120
ignore = E203, W503
exclude = 
    .git
    __pycache__
    venv
    env
    .venv
    build
    dist
    migrations

[isort]
profile = black
line_length = 120

[pycodestyle]
max-line-length = 120
ignore = E203, W503
